# hoverboard_driver_usart2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: Findserial.cmake  serial-config.cmake
py/: ros_hoverboard_uart_node.py
scripts/: # Code Citations.md  run_hoverboard_node.sh  setup_ros2_workspace.sh
src/: hoverboard_node.cpp
src/hoverboard_driver_usart2/: CMakeLists.txt  package.xml
src/hoverboard_driver_usart2/cmake/: Findserial.cmake
src/hoverboard_driver_usart2/src/: hoverboard_node.cpp
